--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -32,7 +32,10 @@ cleaned_noaa|>
          text_label=str_c("month: ",month,"\nprecipitation: ",prcp_avg))|>
   plot_ly(
     x=~month,y=~prcp_avg,type="scatter",mode="markers",color=~year,text=~text_label
-  )
+  )|>
+  layout(title="Average precipation across years",
+         xaxis=list(title="Month"),
+         yaxis=list(title="Average precipitation(tenths of mm)"))
 ```
 
 Column {data-width=350}
@@ -44,8 +47,12 @@ Column {data-width=350}
 cleaned_noaa |> 
   filter(year==2002)|> 
   group_by(year,month)|>
-  summarise(snwd_avg=mean(snwd))|>
-  plot_ly(x=~month,y = ~snwd_avg, color = ~month, type = "bar", colors = "viridis")
+  summarise(snwd_avg=round(mean(snwd),2))|>
+  mutate(text_label=str_c("month: ",month,"\nsnow depth: ",snwd_avg,"mm"))|>
+  plot_ly(x=~month,y = ~snwd_avg, type = "bar", colors = "viridis",text=~text_label)|>
+   layout(title="Average snow depth in 2002",
+         xaxis=list(title="Month"),
+         yaxis=list(title="Average snow depth(mm)"))
 
 ```
 
@@ -58,6 +65,9 @@ cleaned_noaa|>
   group_by(year,month)|>
   summarise(temp_avg=round(mean(temp),2))|>
   mutate(text_label=str_c("month: ",month,"\ntemp difference: ",temp_avg,"°C"))|>
-  plot_ly(x=~month, y= ~temp_avg, type="scatter", mode="lines", color=~year,text=~text_label)
+  plot_ly(x=~month, y= ~temp_avg, type="scatter", mode="lines", color=~year,text=~text_label)|>
+   layout(title="Average temperature difference across 5 years",
+         xaxis=list(title="Month"),
+         yaxis=list(title="Average temperature difference(°C)"))
 ```
 
