--- a/index.Rmd
+++ b/index.Rmd
@@ -8,8 +8,10 @@ output:
 
 ![](https://gifdb.com/images/high/hello-madagascar-penguin-7pernnlu5b6aad3y.gif)
 
-This is Miao Fu's webpage. It has information about Miao's professional experience and a dashboard to navigate “The Instacart Online Grocery Shopping Dataset 2017”.
+This is Miao Fu's webpage. It has information about Miao's professional experience and a project on the visualization of weather data of New York from NOAA National Climatic Data Center.
 
-# About ME
-[Professional experience](experience.html)
+## [About me](experience.html)
+
+
+## [My Project](plot.html)
 
