--- a/plot.Rmd
+++ b/plot.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "plot"
+title: "NY NOAA Project"
 output: 
     html_document:
       toc: true
@@ -7,7 +7,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,message=FALSE,warning=FALSE)
 library(tidyverse)
 library(plotly)
 library(p8105.datasets)
@@ -27,13 +27,20 @@ cleaned_noaa|>
          text_label=str_c("month: ",month,"\nprecipitation: ",prcp_avg))|>
   plot_ly(
     x=~month,y=~prcp_avg,type="scatter",mode="markers",color=~year,text=~text_label
-  )
+  )|>
+  layout(title="Average precipation across years",
+         xaxis=list(title="Month"),
+         yaxis=list(title="Average precipitation(tenths of mm)"))
 
 cleaned_noaa |> 
   filter(year==2002)|> 
   group_by(year,month)|>
-  summarise(snwd_avg=mean(snwd))|>
-  plot_ly(x=~month,y = ~snwd_avg, color = ~month, type = "bar", colors = "viridis")
+  summarise(snwd_avg=round(mean(snwd),2))|>
+  mutate(text_label=str_c("month: ",month,"\nsnow depth: ",snwd_avg,"mm"))|>
+  plot_ly(x=~month,y = ~snwd_avg, type = "bar", colors = "viridis",text=~text_label)|>
+   layout(title="Average snow depth in 2002",
+         xaxis=list(title="Month"),
+         yaxis=list(title="Average snow depth(mm)"))
 
 cleaned_noaa|>
   mutate(temp=0.1*(as.numeric(tmax)-as.numeric(tmin)))|>
@@ -41,6 +48,9 @@ cleaned_noaa|>
   group_by(year,month)|>
   summarise(temp_avg=round(mean(temp),2))|>
   mutate(text_label=str_c("month: ",month,"\ntemp difference: ",temp_avg,"°C"))|>
-  plot_ly(x=~month, y= ~temp_avg, type="scatter", mode="lines", color=~year,text=~text_label)
+  plot_ly(x=~month, y= ~temp_avg, type="scatter", mode="lines", color=~year,text=~text_label)|>
+   layout(title="Average temperature difference across 5 years",
+         xaxis=list(title="Month"),
+         yaxis=list(title="Average temperature difference(°C)"))
 ```
 
